--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,19 @@
 main:
+  - title: "Breaking the Batch Barrier (B3) of Contrastive Learning via Smart Batch Mining"
+    authors: <strong>Raghuveer Thirukovalluru</strong>, Rui Meng, Ye Liu, Karthikeyan K, Mingyi Su, Ping Nie, Semih Yavuz, Yingbo Zhou, Wenhu Chen, Bhuwan Dhingra
+    conference_short: Arxiv
+    conference: Arxiv
+    pdf: https://arxiv.org/pdf/2505.11293
+    code: https://github.com/raghavlite/B3
+    image: ./assets/img/b3.png
+  - title: "Atomic Consistency Preference Optimization for Long-Form Question Answering"
+    authors: Jingfeng Chen*, <strong>Raghuveer Thirukovalluru*</strong>, Junlin Wang, Kaiwei Luo, Bhuwan Dhingra
+    conference_short: Arxiv
+    conference: Arxiv
+    pdf: https://arxiv.org/pdf/2505.09039
+    code: https://github.com/JingfengSteven/ACPO
+    image: ./assets/img/acpo.png
+
   - title: "GenEOL: Harnessing the Generative Power of LLMs for Training-Free Sentence Embeddings"
     authors: <strong>Raghuveer Thirukovalluru</strong>, Bhuwan Dhingra
     conference_short: NAACL
