--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,7 +7,7 @@ main:
     code: https://github.com/raghavlite/B3
     image: ./assets/img/b3.png
   - title: "Atomic Consistency Preference Optimization for Long-Form Question Answering"
-    authors: Jingfeng Chen*, <strong>Raghuveer Thirukovalluru*</strong>, Junlin Wang, Kaiwei Luo, Bhuwan Dhingra
+    authors: Jingfeng Chen*, <strong>Raghuveer Thirukovalluru*</strong>, Junlin Wang, Kaiwei Luo, Bhuwan Dhingra (*Equal Author)
     conference_short: Arxiv
     conference: Arxiv
     pdf: https://arxiv.org/pdf/2505.09039
