--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -6,7 +6,7 @@ main:
     pdf: https://arxiv.org/pdf/2505.11293
     code: https://github.com/raghavlite/B3
     image: ./assets/img/b3.png
-    notes: Spotlight at NeurIPS; SOTA on MMEB Leaderboard
+    notes: Spotlight at NeurIPS <br> SOTA on MMEB Leaderboard
 
   - title: "Atomic Consistency Preference Optimization for Long-Form Question Answering"
     authors: Jingfeng Chen*, <strong>Raghuveer Thirukovalluru*</strong>, Junlin Wang, Kaiwei Luo, Bhuwan Dhingra (*Equal Author)
