--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -6,7 +6,7 @@ main:
     pdf: https://arxiv.org/pdf/2505.11293
     code: https://github.com/raghavlite/B3
     image: ./assets/img/b3.png
-    notes: Spotlight at NeurIPS <br> SOTA on MMEB Leaderboard
+    notes: <br>    Spotlight at NeurIPS <br>    SOTA on MMEB Leaderboard
 
   - title: "Atomic Consistency Preference Optimization for Long-Form Question Answering"
     authors: Jingfeng Chen*, <strong>Raghuveer Thirukovalluru*</strong>, Junlin Wang, Kaiwei Luo, Bhuwan Dhingra (*Equal Author)
@@ -31,7 +31,7 @@ main:
     pdf: https://arxiv.org/pdf/2405.13131
     code: https://arxiv.org/pdf/2405.13131
     image: ./assets/img/asc.png
-    notes: Oral at SouthNLPSymposium 2024
+    notes: <br>    Oral at SouthNLPSymposium 2024
 
   - title: "SumCSE: Summary as a transformation for Contrastive Learning"
     authors: <strong>Raghuveer Thirukovalluru</strong>, Xiaolan Wang, Jun Chen, Shuyang Li, Jie Lei, Rong Jin, Bhuwan Dhingra
