--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -6,12 +6,12 @@ main:
     pdf: https://arxiv.org/pdf/2505.11293
     code: https://github.com/raghavlite/B3
     image: ./assets/img/b3.png
-    notes: <br>    Spotlight at NeurIPS <br>    SOTA on MMEB Leaderboard
+    notes: <br>    Spotlight at NeurIPS <br>    SOTA on MMEB Leaderboard (May 2025)
 
   - title: "Atomic Consistency Preference Optimization for Long-Form Question Answering"
     authors: Jingfeng Chen*, <strong>Raghuveer Thirukovalluru*</strong>, Junlin Wang, Kaiwei Luo, Bhuwan Dhingra (*Equal Author)
-    conference_short: Arxiv
-    conference: Arxiv
+    conference_short: IJCNLP
+    conference: IJCNLP-AACL 2025
     pdf: https://arxiv.org/pdf/2505.09039
     code: https://github.com/JingfengSteven/ACPO
     image: ./assets/img/acpo.png
