--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,6 +7,14 @@ main:
     code: https://github.com/raghavlite/B3
     image: ./assets/img/b3.png
     notes: <br>    Spotlight at NeurIPS <br>    SOTA on MMEB Leaderboard (May 2025)
+  
+  - title: "Text-Guided Semantic Image Encoder"
+    authors: <strong>Raghuveer Thirukovalluru</strong>, Xiaochuang Han, Bhuwan Dhingra, Emily Dinan, Maha Elbayad
+    conference_short: Arxiv
+    conference: Arxiv
+    pdf: https://arxiv.org/pdf/2511.20770
+    code: https://arxiv.org/pdf/2511.20770
+    image: ./assets/img/tgsie.png
 
   - title: "Atomic Consistency Preference Optimization for Long-Form Question Answering"
     authors: Jingfeng Chen*, <strong>Raghuveer Thirukovalluru*</strong>, Junlin Wang, Kaiwei Luo, Bhuwan Dhingra (*Equal Author)
@@ -15,7 +23,8 @@ main:
     pdf: https://arxiv.org/pdf/2505.09039
     code: https://github.com/JingfengSteven/ACPO
     image: ./assets/img/acpo.png
-
+    notes: <br> Oral at IJCNLP-AACL 2025 <br>
+  
   - title: "GenEOL: Harnessing the Generative Power of LLMs for Training-Free Sentence Embeddings"
     authors: <strong>Raghuveer Thirukovalluru</strong>, Bhuwan Dhingra
     conference_short: NAACL
