--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,12 @@
 main:
+  - title: "Text-Guided Semantic Image Encoder"
+    authors: <strong>Raghuveer Thirukovalluru</strong>, Xiaochuang Han, Bhuwan Dhingra, Emily Dinan, Maha Elbayad
+    conference_short: Arxiv
+    conference: Arxiv (Nov 2025)
+    pdf: https://arxiv.org/pdf/2511.20770
+    code: https://arxiv.org/pdf/2511.20770
+    image: ./assets/img/tgsie.png
+
   - title: "Breaking the Batch Barrier (B3) of Contrastive Learning via Smart Batch Mining"
     authors: <strong>Raghuveer Thirukovalluru</strong>, Rui Meng, Ye Liu, Karthikeyan K, Mingyi Su, Ping Nie, Semih Yavuz, Yingbo Zhou, Wenhu Chen, Bhuwan Dhingra
     conference_short: NeurIPS
@@ -7,14 +15,6 @@ main:
     code: https://github.com/raghavlite/B3
     image: ./assets/img/b3.png
     notes: <br>    Spotlight at NeurIPS <br>    SOTA on MMEB Leaderboard (May 2025)
-  
-  - title: "Text-Guided Semantic Image Encoder"
-    authors: <strong>Raghuveer Thirukovalluru</strong>, Xiaochuang Han, Bhuwan Dhingra, Emily Dinan, Maha Elbayad
-    conference_short: Arxiv
-    conference: Arxiv
-    pdf: https://arxiv.org/pdf/2511.20770
-    code: https://arxiv.org/pdf/2511.20770
-    image: ./assets/img/tgsie.png
 
   - title: "Atomic Consistency Preference Optimization for Long-Form Question Answering"
     authors: Jingfeng Chen*, <strong>Raghuveer Thirukovalluru*</strong>, Junlin Wang, Kaiwei Luo, Bhuwan Dhingra (*Equal Author)
