--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://minimal-light-theme.yliu.me/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=HgFkXMgAAAAJ
-cv_link: assets/files/curriculum_vitae.pdf
+cv_link: Raghuveer_PhD_Resume.pdf
 linkedin: https://www.linkedin.com/in/raghavlite/
 github_link: https://github.com/raghavlite
 
