--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ canonical: https://minimal-light-theme.yliu.me/
 google_scholar: https://scholar.google.com/citations?user=HgFkXMgAAAAJ
 cv_link: Raghuveer_PhD_Resume.pdf
 linkedin: https://www.linkedin.com/in/raghavlite/
+twitter: https://x.com/raghavlite
 github_link: https://github.com/raghavlite
 
 # Images (e.g., your profile picture and your website's favicon) 
